--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,6 @@
 #spring.banner.image.margin= //TODO
 #spring.banner.image.invert= //TODO
 server.error.path=/error
-#management.server.port: 9001
+management.server.port: 9001
 #management.server.address: 127.0.0.1
 server.port=9000
